deployment/openshift/3.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"$APP_NAME:latest","namespace":"$NAME_SPACE"},"fieldPath":"spec.template.spec.containers[?(@.name==\"$APP_NAME\")].image","pause":"false"}]
  name: $APP_NAME
  namespace: $NAME_SPACE
  labels:
    app: $APP_NAME
    app.kubernetes.io/part-of: $APP_NAME_LABEL
    app.openshift.io/runtime: java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: $APP_NAME
        deploymentconfig: $APP_NAME
    spec:
      automountServiceAccountToken: false
      containers:
        - name: $APP_NAME
          image: >-
            image-registry.openshift-image-registry.svc:5000/$NAME_SPACE/$APP_NAME:latest
          resources:
            limits:
              memory: 1024Mi
            requests:
              memory: 1024Mi
          livenessProbe:
            httpGet:
              path: $CONTEXT_PATH/status
              port: $HTTP_PORT
              scheme: HTTP
              httpHeaders:
                - name: Authorization
                  value: Basic $BASIC_AUTH_B64
            timeoutSeconds: 10
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      #          securityContext:
      #            allowPrivilegeEscalation: false
      #            runAsUser: 10000
      #            runAsNonRoot: true
      #            capabilities:
      #              drop:
      #                - NET_RAW
      #                - SYS_ADMIN
      #            seccompProfile:
      #              type: RuntimeDefault
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: { }
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 600
status:
  observedGeneration: 47
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
