deployment/openshift/4.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: $APP_NAME
  namespace: $NAME_SPACE
  labels:
    app: $APP_NAME
spec:
  ports:
    - name: $HTTP_PORT-tcp
      protocol: TCP
      port: $HTTP_PORT
      targetPort: $HTTP_PORT
  sessionAffinity: None
  selector:
    app: $APP_NAME
