deployment/openshift/5.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: $APP_NAME
  namespace: $NAME_SPACE
  labels:
    app: $APP_NAME
  annotations:
    haproxy.router.openshift.io/timeout: 2m
    openshift.io/host.generated: 'true'
spec:
  path: /
  host: $APP_NAME-$NAME_SPACE.$OPENSHIFT_DOMAIN
  to:
    kind: Service
    name: $APP_NAME
    weight: 100
  port:
    targetPort: $HTTP_PORT-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: $APP_NAME-$NAME_SPACE.$OPENSHIFT_DOMAIN
      routerName: default
      wildcardPolicy: None
